# deploy-laravel

./: .env.example  .gitignore  .gitlab-ci.yml  Changelog.md  Gemfile  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  run-deploy.sh  run-docker.sh  run-encode.sh  run-jenkins.sh
.circleci/: config.yml
.openshift/: nginx.conf.erb
.openshift/action_hooks/: build  build_laravel  deploy  pre_build  pre_restart
.openshift/action_hooks/fpm/: php.ini.erb
.openshift/tmpl/: .env.tmpl
compose/: app-compose-deploy.yml  app-compose-jenkins.yml  app-compose-mariadb.yml  app-compose.yml
compose/config/mariadb/: init.sql  run-mysqld-mac.sh
compose/docker/alpine-jenkins/: .env.example  Dockerfile  Makefile.am  Makefile.in  docker-build.sh  docker-compose-mariadb.yml  docker-push.sh
compose/docker/alpine-jenkins/rootfs/etc/services.d/jenkins/: run
compose/docker/alpine-jenkins/rootfs/opt/mariadb/: Dockerfile
compose/docker/mariadb/: .gitlab-ci.yml  Dockerfile  Makefile.am  Makefile.in  docker-build.sh  docker-push.sh
compose/docker/ubuntu/: Dockerfile-16.04  Dockerfile-18.04  Dockerfile-20.04  Makefile.am  Makefile.in  (+2 more)
config/: deploy.rb
config/deploy/: myapp-production.rb  myapp-staging.rb
docs/: cheatsheet.md
jenkins/: README.md
jenkins/docs/: install_thinbackup.md  restore_thinbackup.md  setup_thinbackup.md
jenkins/production/: Jenkinsfile
jenkins/staging/: Jenkinsfile
scripts/: .bashrc  .zshrc  ci-bitbucket-preparation.sh  ci-gitlab-preparation.sh
scripts/installer/: setup_git.sh  setup_ubuntu.sh
src/: .env.pipeline.jenkins  README.md
(+11 files in other folders)
